samples/_failures_safe/1761145227_680ec2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e0383d1.c: In function ‘main’:
./samples/SAFE/__tmp_6e0383d1.c:123:12: error: missing terminating " character
  123 |     printf("Enter dimensions for matrix B
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6e0383d1.c:123:5: error: expected expression at end of input
  123 |     printf("Enter dimensions for matrix B
      |     ^~~~~~
./samples/SAFE/__tmp_6e0383d1.c:123:5: error: expected declaration or statement at end of input
